--- a/Model run/readme
+++ b/Model run/readme
@@ -4,4 +4,6 @@ The default model structure is fixed at two zooplankton grazers feeding on multi
 All model set-up is done via the 'ModRun.py' unless one would like to change the model structure, e.g. adding number of grazers or computational settings (i.e. numerical tolerance in odeint). The size ranges of phytoplankton and zooplankton and the number of phytoplankton can be changed via the 'ModRun.py'.
 
 The model computes via the package odeint in the python library scipy.
-The default setting of the model is running with one specialist and one generalist grazer (i.e. a narrower and a broader feeding kernel respectively). One could change the setting in the model run script.
+The default setting of the model runs 9 different scenarios for three levels of nutrient conditions (i.e. oligotrophic, 1 µmol N L-1; eutrophic, 15 µmol N L-1; and hypertrophic, 50 µmol N L-1) and for three levels of mixing frequencies throughout the year (i.e. no mixing, 0 time; medium mixing, 4 times; and high mixing, 12 times). 
+In addition, the default setting of the model is running with one specialist and one generalist grazer (i.e. a narrower and a broader feeding kernel respectively). 
+One could change these settings in the model run script.
